tests/neg/i12150.scala
def f: Unit = // error

end f
