tests/neg/i12150.check
-- [E018] Syntax Error: tests/neg/i12150.scala:1:13 --------------------------------------------------------------------
1 |def f: Unit = // error
  |             ^
  |             expression expected but [31mend[0m found
  |
  | longer explanation available when compiling with `-explain`
